Resolves #52 Popover is visible on hover again

--- a/app/assets/stylesheets/modules/_stats.styl
+++ b/app/assets/stylesheets/modules/_stats.styl
@@ -1,5 +1,4 @@
 .stat-display
-  overflow hidden
   padding 20px 0 0
   .stat-display__stat
     text-align center
